--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,20 @@
 
 # dependencies
 /node_modules
+/.pnp
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
 
 # testing
 /coverage
 
+# next.js
+/.next/
+/out/
 
 # production
 /build
@@ -16,7 +26,9 @@
 
 # debug
 npm-debug.log*
-
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
 .env*
@@ -27,3 +39,4 @@ npm-debug.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+package-lock.json
