--- a/package.json
+++ b/package.json
@@ -1,26 +1,59 @@
 {
-  "name": "cv-analyzer-node",
-  "version": "1.0.0",
-  "description": "CV Analyzer and Generator with Node.js and Express",
-  "main": "server.js",
+  "name": "nextjs-shadcn",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev -H 0.0.0.0 --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "bunx tsc --noEmit && next lint",
+    "format": "bunx biome format --write"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.0",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@types/multer": "^2.0.0",
+    "@types/pdf-parse": "^1.1.5",
+    "@types/pdfkit": "^0.17.2",
+    "autoprefixer": "^10.4.21",
     "canvas": "^3.1.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "compromise": "^14.14.4",
-    "cors": "^2.8.5",
-    "express": "^4.21.2",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.3",
+    "jspdf": "^3.0.1",
+    "lucide-react": "^0.475.0",
     "mammoth": "^1.9.1",
     "multer": "^2.0.2",
     "natural": "^8.1.0",
+    "next": "^15.3.2",
     "pdf-parse": "^1.1.1",
     "pdfkit": "^0.17.1",
-    "tesseract.js": "^6.0.1"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.61.1",
+    "same-runtime": "^0.0.1",
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "tesseract.js": "^6.0.1",
+    "zod": "^4.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "@biomejs/biome": "1.9.4",
+    "@eslint/eslintrc": "^3.3.1",
+    "@types/node": "^20.17.50",
+    "@types/react": "^18.3.22",
+    "@types/react-dom": "^18.3.7",
+    "eslint": "^9.27.0",
+    "eslint-config-next": "15.1.7",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.8.3"
   }
 }
